# orbis-native-jni

./: .gitignore  CMakeLists.txt  README.md
header/: ch_szclsb_orbis_math_jni_JniVectorAPI.h  ch_szclsb_orbis_math_jni_Matrix4f.h
orbis/: CMakeLists.txt  main.cpp
source/: ch_szclsb_orbis_math_jni_JniVectorAPI.cpp  ch_szclsb_orbis_math_jni_Matrix4f.cpp
